crypto-prices/k8s-yaml/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-webapp-service
spec:
  type: NodePort 
  selector:
    app: crypto-webapp
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30333
