crypto-prices/k8s-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: checkcurrency.case.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crypto-webapp-service
            port:
              number: 8080
